# PetraM_Base_ext

./: .gitignore  Makefile  README  setup.py
ext/: CMakeLists.txt  fancy_coefficient.cpp  fancy_coefficient.hpp  sample_pymfem_ext.cpp  sample_pymfem_ext.hpp
mfem_ext_sample/: Makefile  sample_a.i  sample_a.py  sample_a_wrap.cxx  sample_a_wrap.h
petram/ext/: base.py
petram/ext/_base/_par/: Makefile  fancy_coefficient.i  fancy_coefficient.py  fancy_coefficient_wrap.cxx  fancy_coefficient_wrap.h  setup.py
petram/ext/_base/_ser/: Makefile  __init__.py  fancy_coefficient.i  fancy_coefficient.py  fancy_coefficient_wrap.cxx  fancy_coefficient_wrap.h  setup.py
petram/ext/mfem_extra/par/: Makefile  README.md  __init__.py  fancy_coefficient.i  fancy_coefficient.py  fancy_coefficient_wrap.cxx  setup.py
petram/ext/mfem_extra/ser/: Makefile  README.md  fancy_coefficient.i  fancy_coefficient.py  fancy_coefficient_wrap.cxx  setup.py
test/: complex_inverse_matrix_coefficient.py  matrix_slice_coefficient.py
